# cufft_examples

./: CMakeLists.txt  README.md
C2C_C2C/: CMakeLists.txt  cufftMalloc.h  cufftManaged.h  cufftdxMalloc.h  main.cu
C2R_R2C/: CMakeLists.txt  cufftMalloc.h  cufftManaged.h  cufftdxMalloc.h  main.cu
Common/: cuda_helper.h
D2Z_Z2D/: CMakeLists.txt  cufftMalloc.h  cufftManaged.h  cufftdxMalloc.h  main.cu
R2C_C2R/: CMakeLists.txt  cufftMalloc.h  cufftManaged.h  main.cu
Z2D_D2Z/: CMakeLists.txt  cufftMalloc.h  cufftManaged.h  cufftdxMalloc.h  main.cu
Z2Z_Z2Z/: CMakeLists.txt  cufftMalloc.h  cufftManaged.h  main.cu
